# rotator

./: CMakeLists.txt  README.md  demo.cc  demo.h  game.data  game.js  game.wasm  index.html  main.cc  manifest.json  rotator.js  shadermanager.cc  shake.cc  sw.js  wobble.cc  wobble.h
assets/shaders/: shape.frag
